# bootloader-sample

./: Cargo.toml  README.md  build.rs  link.x  rust-toolchain.toml
.cargo/: config.toml
src/: copylist.rs  crc32.rs  flash.rs  main.rs  model.rs  partitions.rs  swap.rs
uzlib/: Cargo.toml  bindings.h  build.rs
uzlib/src/: lib.rs
